package tuling_messages;

option java_package = "com.tuling.protocolbuffdemo.proto";
option java_outer_classname = "TulingMessages";

message MyClasses{
    enum Gender {
        MALE = 0;
        FEMALE = 1;
    }

    message Student{
        required int64 student_id = 1;
        required string student_name = 2;
        optional Gender student_gender = 3;
        optional int32 student_age = 4; 
    }

    required int64 class_id = 1;
    optional string class_name = 2;
    repeated Student class_students = 3;
}